packages/poly/test/validator/samples/animation-on-component/input.poly
<script>
	import Widget from './Widget.poly';

	function foo() {}
</script>

<Widget animate:foo />