packages/poly/test/compiler-errors/samples/store-shadow-scope/main.poly
<script>
	import { writable } from 'poly/store';
	const store = writable();

	function foo() {
		let store = 1;
		$store = 2;
	}
</script>
